# Tetris-wasm

./: .gitignore  Cargo.toml  Rocket.toml
back/: Cargo.toml  TODO_backend.md
back/src/: lib.rs  main.rs  response.rs  routes.rs
back/src/routes/: bots.rs  websocket.rs  websocket_poc.rs
back/tests/: websocket.rs  websocket2.rs  websocket3.rs  ws.rs
front/: Cargo.toml
front/src/: app.rs  lib.rs  main.rs
front/src/component/: board.rs  game.rs  mod.rs  notification.rs  ws_reactor.rs
front/src/scene/: home.rs  mod.rs
scripts/: build_front.sh  test.sh
shared/: Cargo.toml
shared/src/: lib.rs
static/: front.js  front_bg.wasm  index.html  worker.js  worker_bg.wasm
static/css/: style.css
tetris/: Cargo.toml
tetris/src/: board.rs  color.rs  lib.rs  piece.rs  position.rs
tetris/tests/: rotations.rs
tetris/tests/snapshots/: rotations__tests__piece-11.snap  rotations__tests__piece-12.snap  rotations__tests__piece-13.snap  rotations__tests__piece-14.snap  rotations__tests__piece-17.snap  rotations__tests__piece-18.snap  rotations__tests__piece-19.snap  rotations__tests__piece-2.snap  rotations__tests__piece-20.snap  rotations__tests__piece-22.snap  rotations__tests__piece-23.snap  rotations__tests__piece-24.snap  rotations__tests__piece-25.snap  rotations__tests__piece-26.snap  rotations__tests__piece-27.snap  rotations__tests__piece-28.snap  rotations__tests__piece-29.snap  rotations__tests__piece-3.snap  rotations__tests__piece-31.snap  rotations__tests__piece-32.snap  rotations__tests__piece-33.snap  rotations__tests__piece-34.snap  rotations__tests__piece-4.snap  rotations__tests__piece-5.snap  rotations__tests__piece-7.snap
