[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
logger = { git = "https://github.com/Bowarc/Crates.git", package = "logger" }
random = { git = "https://github.com/Bowarc/Crates.git", package = "random" }
rocket = { version = "0.5.0", features = ["json"] }
rocket-client-addr = { git = "https://github.com/bowarc/rocket-client-addr" }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.13", default-features = false, features = [
  "compat",
] }
futures = { workspace = true, default-features = false, features = [
  "async-await",
] }
rocket_ws = "0.1.1"
http = "1.3.1"
log = "0.4.20"
shared = { path = "../shared" }

[dev-dependencies]
tokio-tungstenite = "0.26.2"
