[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "front"
path = "src/main.rs"

[dependencies]
random = {git = "https://github.com/bowarc/Crates", package = "random"}
time = {git = "https://github.com/bowarc/Crates", package = "time"}
math = {git = "https://github.com/bowarc/Crates", package = "math"}
gloo = {version = "0.11.0", features = ["timers", "net"] }
gloo-console =  "0.3.0" 
js-sys = "0.3.68"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = { version = "0.2.93"}
wasm-bindgen-futures = "0.4.41"
wasm-timer = "0.2.5"
serde_json = "1.0.111"
serde = { version = "1.0.194", features = ["derive"] }
futures = "0.3.30"
i18nrs = { version = "0.1.5", features = ["yew"] }
shared = {path = "../shared"}

[dependencies.web-sys]
version = "0.3.68"
features = [
  "MediaQueryList"
]
