[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "front"
path = "src/bin/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
time = { git = "https://github.com/bowarc/Crates", package = "time" }
gloo = { version = "0.11.0", features = ["timers", "net"] }
gloo-console = "0.3.0"
js-sys = "0.3.68"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
serde = { version = "1.0.194", features = ["derive"] }
futures = "0.3.31"
i18nrs = { version = "0.1.5", features = ["yew"] }
shared = { path = "../shared" }
yew-agent = "0.3.0"

[dependencies.web-sys]
version = "0.3.68"
features = ["MediaQueryList"]
